[tool.poetry]
name = "nrsa"
version = "1.0.0"
description = "Nonlinear response spectrum analysis"
authors = ["Wenchen Lie <438171766@qq.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "1.26.4"
matplotlib = "^3.10.3"
pandas = "^2.2.3"
pyqt5-qt5 = "5.15.2"
pyqt5 = "5.15.10"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
